// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after-key.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let a = {
   a /* comment */: () => 1
};

let b = {
   "a" /* comment */: () => 1
};

=====================================output=====================================
let a = {
  a /* comment */: () => 1,
};

let b = {
  a /* comment */: () => 1,
};

================================================================================
`;

exports[`after-left-brace.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const A = { // This is A
	B: "C",
}

const X = {             /* This is X */
	// Key is Y
	Y: "Z",
	// Key is foo
	foo: "bar" // Value is bar
}

=====================================output=====================================
const A = { // This is A
  B: "C",
};

const X = { /* This is X */
  // Key is Y
  Y: "Z",
  // Key is foo
  foo: "bar", // Value is bar
};

================================================================================
`;
